k8s/rain-forecast-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rain-forecast-service
  labels: 
    app: rain-forecast-api
spec:
  selector:
    app: rain-forecast-api
  ports:
  - port: 8000
    targetPort: 8000
